[package]
name = "reffers"
version = "0.2.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
license = "Apache-2.0/MIT"
description = "Rcc, ARef and RMBA are three different smart pointers: wrappers around references, boxes and Arcs."
keywords = ["ref", "box", "pointer", "OwningRef", "Rc"]
repository = "https://github.com/diwic/reffers-rs"
documentation = "http://docs.rs/reffers"
readme = "README.md"

[dependencies]
